03_code2/grade.txt
Grading at Fri Dec 28 11:51:24 UTC 2018
Checking code2.c for legal syntax
temp.c:22:2: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
 };
  ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
